[package]
name = "blacktea"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.126"
serde_json = "1.0.64"
mime = "0.3.16"
route-recognizer = "0.3.0"
fnv = "1.0.7"
async-trait = "0.1.50"
log = "0.4"
pretty_env_logger = "0.4"
jsonwebtoken = "7.2.0"