[package]
name = "blacktea"
version = "0.1.1"
description = "A new comfortable back end framework for rustaceans"
authors = ["LI Rui <lr_cn@outlook.com>"]
readme = "README.md"
keywords = ["blacktea", "http", "web", "framework", "backend"]
categories = ["web-programming::http-server"]
homepage = "https://blacktea.lirui.tech"
repository = "https://github.com/KernelErr/blacktea"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.126"
serde_json = "1.0.64"
mime = "0.3.16"
route-recognizer = "0.3.0"
fnv = "1.0.7"
log = "0.4"
url = "2.2.2"

[[example]]
name = "echo"
